--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "morgan"     : "1.7.0",
     "fs"         : "",
     "body-parser": "1.15.2",
-    "method-override": "2.3.6"
+    "method-override": "2.3.6",
+    "bcrypt"     : "0.8.7",
+    "passport-jwt": "2.1.0",
+    "jwt-simple" : "0.5.0",
+    "passport"   : "0.3.2"
+
   }
 }
