--- a/server/package.json
+++ b/server/package.json
@@ -15,7 +15,13 @@
     "bcrypt"     : "0.8.7",
     "passport-jwt": "2.1.0",
     "jwt-simple" : "0.5.0",
-    "passport"   : "0.3.2"
+    "passport"   : "0.3.2",
+    "angular"    : "1.5.8",
+    "angular-animate": "1.5.8",
+    "angular-aria": "1.5.8",
+    "angular-material": "1.1.0",
+    "angular-ui-router": "0.3.1",
+    "bootstrap": "3.3.7"
 
   }
 }
